SERVER-37749 replSetResizeOplog command does not validate argument correctly